<resources>
    <string name="app_name">TwitGuesser</string>

    <string name="label_home_screen">Home Screen</string>
    <string name="label_game_play">Guess Tweets</string>
    <string name="label_settings">Settings</string>
    <string name="label_result_screen">Results</string>

    <string name="play_button">Play!</string>
    <string name="app_settings">Settings</string>
    <string name="highest_streak_text">Highest Streak: </string>
    <string name="accuracy_text">Accuracy: </string>

    <string name="current_streak_text">Current Streak:</string>

    <string name="result_correct_text">Correct!</string>
    <string name="result_wrong_text">Wrong!</string>
    <string name="next_button_text">Continue</string>

    <string name="pref_audio_title">Play Background Music</string>
    <string name="pref_audio_key">mute_audio</string>
    <string name="pref_difficulty_title">Choose Difficulty</string>
    <string name="pref_difficulty_key">difficulty_choice</string>

    <string name="pref_difficulty_entry_easy">Easy</string>
    <string name="pref_difficulty_entry_medium">Medium</string>
    <string name="pref_difficulty_entry_hard">Hard</string>

    <string name="pref_difficulty_value_easy">easy_value</string>
    <string name="pref_difficulty_value_medium">medium_value</string>
    <string name="pref_difficulty_value_hard">hard_value</string>

    <string name="pref_difficulty_default_value">@string/pref_difficulty_value_hard</string>
    <string name="pref_reset_title">Reset Statistics</string>
    <string name="pref_reset_key">reset_stats</string>
    <string name="pref_reset_summary">Click here to reset your statistics</string>

    <string name="db_val_correct">Correct</string>
    <string name="db_val_incorrect">Incorrect</string>

    <string name="display_percent">%1$.0f%%</string>

    <string name="results_display_correct">Correct!</string>
    <string name="results_display_incorrect">Incorrect! The correct answer is: %1$s</string>

</resources>