<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="Settings">
        <CheckBoxPreference
            android:title="@string/pref_audio_title"
            android:key="@string/pref_audio_key"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            android:title="@string/pref_difficulty_title"
            android:key="@string/pref_difficulty_key"
            android:dialogTitle="@string/pref_difficulty_title"
            android:entries="@array/pref_difficulty_entries"
            android:entryValues="@array/pref_difficulty_values"
            android:defaultValue="@string/pref_difficulty_default_value"
            app:useSimpleSummaryProvider="true"/>

        <Preference
            android:title="@string/pref_reset_title"
            android:key="@string/pref_reset_key"
            android:summary="@string/pref_reset_summary"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>