<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/home_screen">

    <fragment
        android:id="@+id/home_screen"
        android:name="com.example.main.ui.HomeScreenFragment"
        android:label="@string/label_home_screen">
        <action
            android:id="@+id/navigate_to_gameplay"
            app:destination="@id/game_play"/>
        <action
            android:id="@+id/navigate_to_settings"
            app:destination="@id/settings"/>
    </fragment>

    <fragment
        android:id="@+id/game_play"
        android:name="com.example.main.ui.GamePlayFragment"
        android:label="@string/label_game_play">
        <action
            android:id="@+id/navigate_to_settings"
            app:destination="@id/settings"/>
        <action
            android:id="@+id/navigate_to_result"
            app:destination="@id/result_screen"/>
    </fragment>

    <fragment
        android:id="@+id/result_screen"
        android:name="com.example.main.ui.ResultScreenFragment"
        android:label="@string/label_result_screen">
        <argument
            android:name="correctAnswer"
            app:argType="string"/>
        <argument
            android:name="isCorrect"
            app:argType="boolean"
            android:defaultValue="false"/>
        <action
            android:id="@+id/navigate_to_settings"
            app:destination="@+id/settings"/>
        <action
            android:id="@+id/navigate_to_gameplay"
            app:destination="@+id/game_play"/>
    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="com.example.main.ui.SettingsFragment"
        android:label="@string/label_settings">

    </fragment>

</navigation>