<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/spotify_black">

    <TextView
        android:id="@+id/text_guess_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_correct_text"
        android:textColor="@color/twitter_extralightgrey"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ic_guess_correct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_guess_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_wrong_text"
        android:textColor="@color/twitter_extralightgrey"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ic_guess_wrong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/ic_guess_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Correct guess icon"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_guess_correct_48" />

    <ImageView
        android:id="@+id/ic_guess_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Wrong guess icon "
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_guess_wrong_48" />

    <TextView
        android:id="@+id/current_streak_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textSize="16dp"
        android:text="@string/current_streak_text"
        android:textColor="@color/twitter_extralightgrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_guess_correct"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/current_streak_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textSize="18dp"
        android:textColor="@color/twitter_extralightgrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_streak_text" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_next"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:background="@drawable/game_button_bg"
        android:fontFamily="sans-serif-medium"
        android:text="@string/next_button_text"
        android:textColor="@drawable/game_button_text"
        android:textSize="14dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:soundEffectsEnabled="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>